--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="static/plugins/themify/themify-icons.css">
 
     <!-- Line Icons -->
-    <link rel="stylesheet" href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 
     <title>Santanu Panda</title>
 </head>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                     <!-- Data Structures Sub Menu -->
-                    <a href="#dsSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Data Structures</a>
+                    <a href="#dsSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-bricks"></i>&emsp;Data Structures</a>
                     <ul class="collapse list-unstyled" id="dsSubmenu">
                         <li>
                             <a href="#llSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Linked List</a>
@@ -74,14 +74,14 @@
                             <a href="#stackSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Stack</a>
                             <ul class="collapse list-unstyled" id="stackSubmenu">
                                 <li><a href="#">Stack Using Linked List</a></li>
-                                <li><a href="#">Stack using list ( Python )</a></li>
+                                <li><a href="#">Stack using list&emsp;<i class="lni lni-python"></i></a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#qSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Queue</a>
                             <ul class="collapse list-unstyled" id="qSubmenu">
                                 <li><a href="#">Queue Using Linked List</a></li>
-                                <li><a href="#">Queue using list (Python)</a></li>
+                                <li><a href="#">Queue using list&emsp;<i class="lni lni-python"></i></a></li>
                             </ul>
                         </li>
                         <li>
@@ -98,7 +98,7 @@
                     </ul>
 
                     <!-- Algorithms Sub Menu -->
-                    <a href="#algoSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Algorithms</a>
+                    <a href="#algoSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-cog"></i>&emsp;Algorithms</a>
                     <ul class="collapse list-unstyled" id="algoSubmenu">
                         <li>
                             <a href="#searchingSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Searching</a>
@@ -120,7 +120,7 @@
                     </ul>
 
                     <!-- Cheatsheets Sub Menu -->
-                    <a href="#cheatsheets" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Cheatsheets</a>
+                    <a href="#cheatsheets" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-sort-alpha-asc"></i>&emsp;Cheatsheets</a>
                     <ul class="collapse list-unstyled" id="cheatsheets">
                         <li><a href="#">Terms in Agile</a></li>
                         <li><a href="#">Unix Commands</a></li>
@@ -128,7 +128,7 @@
                     </ul>
 
                     <!-- Travel Sub Menu -->
-                    <a href="#travelSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Travel Diaries</a>
+                    <a href="#travelSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-travel"></i>&emsp;Travel Diaries</a>
                     <ul class="collapse list-unstyled" id="travelSubmenu">
                         <li><a href="#">Pondicherry</a></li>
                         <li><a href="#">Ooty and Conoor</a></li>
@@ -136,7 +136,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#" class="wave-effect">Interview Preparation</a>
+                    <a href="#" class="wave-effect"><i class="lni lni-user"></i>&emsp;Interview Preparation</a>
                 </li>
             </ul>
         </nav>
@@ -159,16 +159,12 @@
                                         Web tools.
                                     </p>
                                 </div>
-                                <div class="row social-link-container" style="margin-left: 0;">
-                                    <div class="social-link">
-                                        <button class="btn neumorphic neumorphic-pill" style="margin-bottom: 1rem;">
-                                            <a href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">View my Work</a>
-                                        </button>
+                                <div class="row my-4 ml-0 ml-sm-4">
+                                    <div class="col">
+                                        <a class="btn neumorphic neumorphic-pill" href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">View my Work</a>
                                     </div>
-                                    <div class="social-link">
-                                        <button class="btn neumorphic neumorphic-pill" style="margin-bottom: 1rem; margin-left: 2rem;">
-                                            <a href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">Download CV</a>
-                                        </button>
+                                    <div class="col">
+                                        <a class="btn neumorphic neumorphic-pill" href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">Download CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -176,20 +172,12 @@
                         <div class="col-md-4 col-sm-4 col-xs-12 offset-sm-1">
                             <img src="./static/img/Hero1.jpg" class="img-fluid rounded" alt="Responsive image">
                             <div class="row mt-5 px-2">
-                                <div class="neumorphic neumorphic-box col-md-10 col-sm-10 col-xs-12 offset-sm-1 social-links">
-                                    <div class="row social-link-container">
-                                        <div class="social-link">
-                                            <a href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank"><i class="lni-facebook-filled"></i></a>
-                                        </div>
-                                        <div class="social-link">
-                                            <a href="https://github.com/shaantalk" rel="noopener" target="_blank"><i class="lni-github-original"></i></a>
-                                        </div>
-                                        <div class="social-link">
-                                            <a href="https://www.linkedin.com/in/shaantalk/" rel="noopener" target="_blank"><i class="lni-linkedin-original"></i></a>
-                                        </div>
-                                        <div class="social-link">
-                                            <a href="https://wa.me/917866040088" rel="noopener" target="_blank"><i class="lni-whatsapp"></i></a>
-                                        </div>
+                                <div class="neumorphic neumorphic-box col-md-10 col-sm-10 col-xs-12 offset-sm-1">
+                                    <div class="row mx-0 py-3 lead text-center">
+                                        <a href="https://www.facebook.com/talk2Shaan" class="col" rel="noopener" target="_blank"><i class="lni lni-facebook"></i></a>
+                                        <a href="https://github.com/shaantalk" class="col" rel="noopener" target="_blank"><i class="lni lni-github"></i></a>
+                                        <a href="https://www.linkedin.com/in/shaantalk/" class="col" rel="noopener" target="_blank"><i class="lni lni-linkedin"></i></a>
+                                        <a href="https://wa.me/917866040088" class="col" rel="noopener" target="_blank"><i class="lni lni-whatsapp"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -224,7 +212,7 @@
                             <!-- Python -->
                             <div class="row">
                                 <div class="col">
-                                    <div class="float-left">Python</div>
+                                    <div class="float-left lead"><i class="lni lni-python"></i>&emsp;Python</div>
                                     <div class="float-right">90%</div>
                                 </div>
                             </div>
@@ -237,7 +225,7 @@
                             <!-- Javascript -->
                             <div class="row">
                                 <div class="col">
-                                    <div class="float-left">Javascript</div>
+                                    <div class="float-left lead"><i class="lni lni-javascript"></i>&emsp;Javascript</div>
                                     <div class="float-right">70%</div>
                                 </div>
                             </div>
@@ -250,7 +238,7 @@
                             <!-- Bootstrap -->
                             <div class="row">
                                 <div class="col">
-                                    <div class="float-left">Bootstrap</div>
+                                    <div class="float-left lead"><i class="lni lni-bootstrap"></i>&emsp;Bootstrap</div>
                                     <div class="float-right">95%</div>
                                 </div>
                             </div>
@@ -264,7 +252,7 @@
                             <div class="d-none d-sm-block">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="float-left">React</div>
+                                        <div class="float-left lead"><i class="lni lni-react"></i>&emsp;React</div>
                                         <div class="float-right">25%</div>
                                     </div>
                                 </div>
@@ -278,7 +266,7 @@
                             <!-- Postgres -->
                             <div class="row">
                                 <div class="col">
-                                    <div class="float-left">Postgres</div>
+                                    <div class="float-left lead"><i class="lni lni-database"></i>&emsp;Postgres</div>
                                     <div class="float-right">95%</div>
                                 </div>
                             </div>
@@ -292,7 +280,7 @@
                             <div class="d-none d-sm-block">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="float-left">Git</div>
+                                        <div class="float-left lead"><i class="lni lni-github-original"></i>&emsp;Git</div>
                                         <div class="float-right">50%</div>
                                     </div>
                                 </div>
@@ -341,13 +329,13 @@
                                         <p>Handled asynchronous tasks with RabbitMQ, Redis, Celery.</p>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row d-none d-sm-block">
                                     <div class="col">
                                         <p>Made several projects on Robotics using Arduino and Raspberry Pi.</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class=" d-none d-sm-block mt-4 px-3 py-1 py-sm-3">
+                            <div class="d-none d-sm-block mt-4 px-3 py-1 py-sm-3">
                                 <!-- Certificates-->
                                 <div class="row">
                                     <div class="col">
