updated Git Icon

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                                 </div>
                                 <div class="card-footer row mx-0" style="font-size: large;">
                                     <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
                                     <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                 </div>
                             </div>
@@ -420,7 +420,7 @@
                                 </div>
                                 <div class="card-footer row mx-0" style="font-size: large;">
                                     <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
                                     <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                 </div>
                             </div>
@@ -439,7 +439,7 @@
                                     </div>
                                     <div class="card-footer row mx-0" style="font-size: large;">
                                         <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
                                         <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                     </div>
                                 </div>
@@ -455,7 +455,7 @@
                                     </div>
                                     <div class="card-footer row mx-0" style="font-size: large;">
                                         <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
                                         <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                     </div>
                                 </div>
@@ -471,7 +471,7 @@
                                     </div>
                                     <div class="card-footer row mx-0" style="font-size: large;">
                                         <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                        <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
                                         <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                     </div>
                                 </div>
