Add Project : Covid 19 Tracker

--- a/index.html
+++ b/index.html
@@ -397,15 +397,15 @@
                         <div class="neumorphic-inset neumorphic-box col-md-3 col-sm-3 col-xs-12 text-center px-0 mx-sm-auto mt-2 mt-sm-0">
                             <div class=" card bg-transparent ">
                                 <div class="card-header ">
-                                    <h5 class="d-inline ">Mini Portfolio</h5>
+                                    <h5 class="d-inline ">Covid 19 Tracker</h5>
                                 </div>
                                 <div class="card-body ">
-                                    <p class="card-text ">This is a minimal style, responsive portfolio page. It has 5 pages.</p>
+                                    <p class="card-text ">Stats on Covid 19 from public APIs.</p>
                                 </div>
                                 <div class="card-footer row mx-0" style="font-size: large;">
-                                    <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
+                                    <a href="https://shaantalk.github.io/covid19tracker/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
+                                    <a href="https://github.com/shaantalk/covid19tracker" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
+                                    <a href="https://github.com/shaantalk/covid19tracker/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                 </div>
                             </div>
                         </div>
