--- a/index.html
+++ b/index.html
@@ -413,15 +413,14 @@
                         <div class="neumorphic-inset neumorphic-box col-md-3 col-sm-3 col-xs-12 text-center px-0 mx-sm-auto mt-2 mt-sm-0">
                             <div class="card bg-transparent ">
                                 <div class="card-header ">
-                                    <h5 class="d-inline ">Mini Portfolio</h5>
+                                    <h5 class="d-inline ">Notes</h5>
                                 </div>
                                 <div class="card-body ">
-                                    <p class="card-text ">This is a minimal style, responsive portfolio page. It has 5 pages.</p>
+                                    <p class="card-text ">Note Taking app make using React, Firestore, Google Cloud Functions, Material UI</p>
                                 </div>
                                 <div class="card-footer row mx-0" style="font-size: large;">
-                                    <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
-                                    <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
+                                    <a href="https://github.com/shaantalk/Notes-App" target="blank" class="col mx-auto"><i class="lni lni-github"></i></a>
+                                    <a href="https://github.com/shaantalk/Notes-App/fork" target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
                                 </div>
                             </div>
                         </div>
