--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                                 </div>
                                 <div class="row my-4 ml-0 ml-sm-4">
                                     <div class="col">
-                                        <a class="btn neumorphic neumorphic-pill" href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">View my Work</a>
+                                        <a class="btn neumorphic neumorphic-pill" href="https://github.com/shaantalk" rel="noopener" target="_blank">View my Work</a>
                                     </div>
                                     <div class="col">
-                                        <a class="btn neumorphic neumorphic-pill" href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank">Download CV</a>
+                                        <a class="btn neumorphic neumorphic-pill" href="static/CV/SantanuPanda_Resume.pdf" rel="noopener" target="_blank">Download CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -480,6 +480,39 @@
                     <div class="row mt-3">
                         <div class="col-md-12 col-sm-12 col-xs-12 text-center m-auto">
                             <a href="https://github.com/shaantalk" target="blank" class="btn btn-custom neumorphic neumorphic-box">Click here to see more...</a>
+                        </div>
+                    </div>
+                </section>
+                <!-- My Project Section Starts -->
+                <section id="section3" class="col-md-12 col-sm-12 col-xs-12 mt-3 mt-sm-0">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                            <h1>Upcoming Projects</h1>
+                        </div>
+                    </div>
+                    <div class="d-none d-sm-block">
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                                <p>Here are some of my upcoming projects. Please follow the development in GitHub.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects row px-1 px-sm-3 py-sm-2">
+                        <!-- First Project -->
+                        <div class="neumorphic-inset neumorphic-box col-md-3 col-sm-3 col-xs-12 text-center px-0 mx-sm-auto mt-2 mt-sm-0">
+                            <div class="card bg-transparent">
+                                <div class="card-header">
+                                    <h5 class="d-inline">Posts</h5>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Social Network App made using React, Express JS, Firestore, Google Cloud Functions, Material UI</p>
+                                </div>
+                                <div class="card-footer row mx-0" style="font-size: large;">
+                                    <a href="https://shaantalk.github.io/miniportfolio/" target="blank" class="col mx-auto"><i class="lni lni-link"></i></a>
+                                    <a href="https://github.com/shaantalk/miniportfolio" target="blank" class="col mx-auto"><i class="lni lni-github-original"></i></a>
+                                    <a href="https://github.com/shaantalk/miniportfolio/fork " target="blank" class="col mx-auto"><i class="lni lni-git"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
