Added Canada Pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <i class="lni lni-menu"></i>
                 </a>
             </div>
-            <a class="navbar-brand" href="#">Santanu Panda</a>
+            <a class="navbar-brand" href="./index.html">Santanu Panda</a>
 
             <ul class="navbar-nav ml-auto navbar-top-links">
                 <li class="dropdown">
@@ -55,7 +55,7 @@
                 </div>
 
                 <li class="active">
-                    <a href="#homeSubmenu" class="wave-effect">
+                    <a href="./index.html" class="wave-effect">
                         <i class="ti-home m-r-10"></i> Home
                     </a>
                 </li>
@@ -66,36 +66,36 @@
                         <li>
                             <a href="#llSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Linked List</a>
                             <ul class="collapse list-unstyled" id="llSubmenu">
-                                <li><a href="#">Single Link List</a></li>
-                                <li><a href="#">Double Link List</a></li>
-                                <li><a href="#">Circular Link List</a></li>
+                                <li><a href="./underDevelopment.html">Single Link List</a></li>
+                                <li><a href="./underDevelopment.html">Double Link List</a></li>
+                                <li><a href="./underDevelopment.html">Circular Link List</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#stackSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Stack</a>
                             <ul class="collapse list-unstyled" id="stackSubmenu">
-                                <li><a href="#">Stack Using Linked List</a></li>
-                                <li><a href="#">Stack using list&emsp;<i class="lni lni-python"></i></a></li>
+                                <li><a href="./underDevelopment.html">Stack Using Linked List</a></li>
+                                <li><a href="./underDevelopment.html">Stack using list&emsp;<i class="lni lni-python"></i></a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#qSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Queue</a>
                             <ul class="collapse list-unstyled" id="qSubmenu">
-                                <li><a href="#">Queue Using Linked List</a></li>
-                                <li><a href="#">Queue using list&emsp;<i class="lni lni-python"></i></a></li>
+                                <li><a href="./underDevelopment.html">Queue Using Linked List</a></li>
+                                <li><a href="./underDevelopment.html">Queue using list&emsp;<i class="lni lni-python"></i></a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#treeSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Tree</a>
                             <ul class="collapse list-unstyled" id="treeSubmenu">
-                                <li><a href="#">Binary Tree</a></li>
-                                <li><a href="#">Binary Search Tree</a></li>
-                                <li><a href="#">KD Tree</a></li>
-                                <li><a href="#">Trie</a></li>
-                                <li><a href="#">Heap</a></li>
+                                <li><a href="./underDevelopment.html">Binary Tree</a></li>
+                                <li><a href="./underDevelopment.html">Binary Search Tree</a></li>
+                                <li><a href="./underDevelopment.html">KD Tree</a></li>
+                                <li><a href="./underDevelopment.html">Trie</a></li>
+                                <li><a href="./underDevelopment.html">Heap</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Graph</a></li>
+                        <li><a href="./underDevelopment.html">Graph</a></li>
                     </ul>
 
                     <!-- Algorithms Sub Menu -->
@@ -104,18 +104,18 @@
                         <li>
                             <a href="#searchingSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Searching</a>
                             <ul class="collapse list-unstyled" id="searchingSubmenu">
-                                <li><a href="#">Linear Search</a></li>
-                                <li><a href="#">Binary Search</a></li>
+                                <li><a href="./underDevelopment.html">Linear Search</a></li>
+                                <li><a href="./underDevelopment.html">Binary Search</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#sortingSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false">Sorting</a>
                             <ul class="collapse list-unstyled" id="sortingSubmenu">
-                                <li><a href="#">Selection Sort</a></li>
-                                <li><a href="#">Bubble Sort</a></li>
-                                <li><a href="#">Inertion Sort</a></li>
-                                <li><a href="#">Merge Sort</a></li>
-                                <li><a href="#">Quick Sort</a></li>
+                                <li><a href="./underDevelopment.html">Selection Sort</a></li>
+                                <li><a href="./underDevelopment.html">Bubble Sort</a></li>
+                                <li><a href="./underDevelopment.html">Inertion Sort</a></li>
+                                <li><a href="./underDevelopment.html">Merge Sort</a></li>
+                                <li><a href="./underDevelopment.html">Quick Sort</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -123,21 +123,30 @@
                     <!-- Cheatsheets Sub Menu -->
                     <a href="#cheatsheets" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-sort-alpha-asc"></i>&emsp;Cheatsheets</a>
                     <ul class="collapse list-unstyled" id="cheatsheets">
-                        <li><a href="#">Terms in Agile</a></li>
-                        <li><a href="#">Unix Commands</a></li>
-                        <li><a href="#">Git Commands</a></li>
+                        <li><a href="./underDevelopment.html">Terms in Agile</a></li>
+                        <li><a href="./underDevelopment.html">Unix Commands</a></li>
+                        <li><a href="./underDevelopment.html">Git Commands</a></li>
                     </ul>
 
                     <!-- Travel Sub Menu -->
                     <a href="#travelSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-travel"></i>&emsp;Travel Diaries</a>
                     <ul class="collapse list-unstyled" id="travelSubmenu">
-                        <li><a href="#">Pondicherry</a></li>
-                        <li><a href="#">Ooty and Conoor</a></li>
-                        <li><a href="#">Future Travel Plans</a></li>
+                        <li><a href="./underDevelopment.html">Pondicherry</a></li>
+                        <li><a href="./underDevelopment.html">Ooty and Conoor</a></li>
+                        <li><a href="./underDevelopment.html">Future Travel Plans</a></li>
+                    </ul>
+
+                    <!-- Canada Immigration Sub Menu -->
+                    <a href="#canadaSubmenu" class="accordion-toggle wave-effect" data-toggle="collapse" aria-expanded="false"><i class="lni lni-map-marker"></i>&emsp;Canada Immigration</a>
+                    <ul class="collapse list-unstyled" id="canadaSubmenu">
+                        <li><a href="./canadaStepsAndTimeline.html">Steps and Timeline</a></li>
+                        <li><a href="./canadaCostBreakdown.html">Cost Breakdown</a></li>
+                        <li><a href="./underDevelopment.html">Important Materials</a></li>
+                        <li><a href="./canadaIndiaCostOfLivingExpenseCompared.html">Cost of Living - comparison</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#" class="wave-effect"><i class="lni lni-user"></i>&emsp;Interview Preparation</a>
+                    <a href="./underDevelopment.html" class="wave-effect"><i class="lni lni-user"></i>&emsp;Interview Preparation</a>
                 </li>
             </ul>
         </nav>
@@ -560,7 +569,8 @@
         </filter>
     </svg>
     <!-- JQuery 3.2.1 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="static/js/jquery-3.2.1.slim.min.js"></script>
     <!-- Popper -->
     <script src="static/js/popper.min.js "></script>
     <!-- Bootstrap -->
